// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VariableListView render component at account level - with no variable data 1`] = `
<div>
  <div
    class="TableV2--table table"
  >
    <div
      class="TableV2--header"
      role="row"
    >
      <div
        class="TableV2--cell"
        colspan="1"
        role="columnheader"
        style="width: 30%;"
      >
        <div
          class="Text--withDocsTooltip"
          data-tooltip-id="VariableListViewname"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            variableLabel
          </p>
        </div>
      </div>
      <div
        class="TableV2--cell"
        colspan="1"
        role="columnheader"
        style="width: 20%;"
      >
        <div
          class="Text--withDocsTooltip"
          data-tooltip-id="VariableListViewtype"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            typeLabel
          </p>
        </div>
      </div>
      <div
        class="TableV2--cell"
        colspan="1"
        role="columnheader"
        style="width: 20%;"
      >
        <div
          class="Text--withDocsTooltip"
          data-tooltip-id="VariableListViewvalidation"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            variables.inputValidation
          </p>
        </div>
      </div>
      <div
        class="TableV2--cell"
        colspan="1"
        role="columnheader"
        style="width: 25%;"
      >
        <div
          class="Text--withDocsTooltip"
          data-tooltip-id="VariableListViewvalue"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            valueLabel
          </p>
        </div>
      </div>
      <div
        class="TableV2--cell"
        colspan="1"
        role="columnheader"
        style="width: 5%;"
      >
        <div
          class="Text--withDocsTooltip"
          data-tooltip-id="VariableListViewaction"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            
          </p>
        </div>
      </div>
    </div>
    <div
      class="TableV2--body"
    />
  </div>
</div>
`;

exports[`VariableListView render component at account level - with no variable data 2`] = `
<div>
  <div
    class="TableV2--table table"
  >
    <div
      class="TableV2--header"
      role="row"
    >
      <div
        class="TableV2--cell"
        colspan="1"
        role="columnheader"
        style="width: 30%;"
      >
        <div
          class="Text--withDocsTooltip"
          data-tooltip-id="VariableListViewname"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            variableLabel
          </p>
        </div>
      </div>
      <div
        class="TableV2--cell"
        colspan="1"
        role="columnheader"
        style="width: 20%;"
      >
        <div
          class="Text--withDocsTooltip"
          data-tooltip-id="VariableListViewtype"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            typeLabel
          </p>
        </div>
      </div>
      <div
        class="TableV2--cell"
        colspan="1"
        role="columnheader"
        style="width: 20%;"
      >
        <div
          class="Text--withDocsTooltip"
          data-tooltip-id="VariableListViewvalidation"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            variables.inputValidation
          </p>
        </div>
      </div>
      <div
        class="TableV2--cell"
        colspan="1"
        role="columnheader"
        style="width: 25%;"
      >
        <div
          class="Text--withDocsTooltip"
          data-tooltip-id="VariableListViewvalue"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            valueLabel
          </p>
        </div>
      </div>
      <div
        class="TableV2--cell"
        colspan="1"
        role="columnheader"
        style="width: 5%;"
      >
        <div
          class="Text--withDocsTooltip"
          data-tooltip-id="VariableListViewaction"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            
          </p>
        </div>
      </div>
    </div>
    <div
      class="TableV2--body"
    />
  </div>
</div>
`;

exports[`VariableListView render component at account level 1`] = `
<div>
  <div
    class="TableV2--table table"
  >
    <div
      class="TableV2--header"
      role="row"
    >
      <div
        class="TableV2--cell"
        colspan="1"
        role="columnheader"
        style="width: 30%;"
      >
        <div
          class="Text--withDocsTooltip"
          data-tooltip-id="VariableListViewname"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            variableLabel
          </p>
        </div>
      </div>
      <div
        class="TableV2--cell"
        colspan="1"
        role="columnheader"
        style="width: 20%;"
      >
        <div
          class="Text--withDocsTooltip"
          data-tooltip-id="VariableListViewtype"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            typeLabel
          </p>
        </div>
      </div>
      <div
        class="TableV2--cell"
        colspan="1"
        role="columnheader"
        style="width: 20%;"
      >
        <div
          class="Text--withDocsTooltip"
          data-tooltip-id="VariableListViewvalidation"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            variables.inputValidation
          </p>
        </div>
      </div>
      <div
        class="TableV2--cell"
        colspan="1"
        role="columnheader"
        style="width: 25%;"
      >
        <div
          class="Text--withDocsTooltip"
          data-tooltip-id="VariableListViewvalue"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            valueLabel
          </p>
        </div>
      </div>
      <div
        class="TableV2--cell"
        colspan="1"
        role="columnheader"
        style="width: 5%;"
      >
        <div
          class="Text--withDocsTooltip"
          data-tooltip-id="VariableListViewaction"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            
          </p>
        </div>
      </div>
    </div>
    <div
      class="TableV2--body"
    >
      <div
        class="TableV2--row TableV2--card"
        role="row"
      >
        <div
          class="TableV2--cells"
        >
          <div
            class="TableV2--cell"
            role="cell"
            style="width: 30%;"
          >
            <div
              class="Layout--horizontal StyledProps--main"
            >
              <div
                class="Layout--vertical StyledProps--main"
              >
                <div
                  class="Layout--horizontal StyledProps--main"
                  style="width: 230px;"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
                    style="--text-line-clamp: 1;"
                  >
                    CUSTOM_VARIABLE
                  </p>
                  
                </div>
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--font-variation-small"
                  style="--text-line-clamp: 1; width: 230px;"
                >
                  common.ID: CUSTOM_VARIABLE
                </p>
              </div>
            </div>
          </div>
          <div
            class="TableV2--cell"
            role="cell"
            style="width: 20%;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-variation-body"
            >
              String
            </p>
          </div>
          <div
            class="TableV2--cell"
            role="cell"
            style="width: 20%;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-variation-body"
            >
              FIXED
            </p>
          </div>
          <div
            class="TableV2--cell"
            role="cell"
            style="width: 25%;"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--font-variation-form-input-text"
              style="--text-line-clamp: 1;"
            >
              CUSTOM
            </p>
          </div>
          <div
            class="TableV2--cell"
            role="cell"
            style="width: 5%;"
          >
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-end"
            >
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="Options"
                    >
                      <svg
                        fill="currentColor"
                        height="16"
                        viewBox="0 0 4 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <circle
                          cx="2"
                          cy="2"
                          r="1.5"
                        />
                        <circle
                          cx="2"
                          cy="8"
                          r="1.5"
                        />
                        <circle
                          cx="2"
                          cy="14"
                          r="1.5"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VariableListView render component with initial page render - paged metric info missing 1`] = `
<div>
  <div
    class="TableV2--table table"
  >
    <div
      class="TableV2--header"
      role="row"
    >
      <div
        class="TableV2--cell"
        colspan="1"
        role="columnheader"
        style="width: 30%;"
      >
        <div
          class="Text--withDocsTooltip"
          data-tooltip-id="VariableListViewname"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            variableLabel
          </p>
        </div>
      </div>
      <div
        class="TableV2--cell"
        colspan="1"
        role="columnheader"
        style="width: 20%;"
      >
        <div
          class="Text--withDocsTooltip"
          data-tooltip-id="VariableListViewtype"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            typeLabel
          </p>
        </div>
      </div>
      <div
        class="TableV2--cell"
        colspan="1"
        role="columnheader"
        style="width: 20%;"
      >
        <div
          class="Text--withDocsTooltip"
          data-tooltip-id="VariableListViewvalidation"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            variables.inputValidation
          </p>
        </div>
      </div>
      <div
        class="TableV2--cell"
        colspan="1"
        role="columnheader"
        style="width: 25%;"
      >
        <div
          class="Text--withDocsTooltip"
          data-tooltip-id="VariableListViewvalue"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            valueLabel
          </p>
        </div>
      </div>
      <div
        class="TableV2--cell"
        colspan="1"
        role="columnheader"
        style="width: 5%;"
      >
        <div
          class="Text--withDocsTooltip"
          data-tooltip-id="VariableListViewaction"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            
          </p>
        </div>
      </div>
    </div>
    <div
      class="TableV2--body"
    >
      <div
        class="TableV2--row TableV2--card"
        role="row"
      >
        <div
          class="TableV2--cells"
        >
          <div
            class="TableV2--cell"
            role="cell"
            style="width: 30%;"
          >
            <div
              class="Layout--horizontal StyledProps--main"
            >
              <div
                class="Layout--vertical StyledProps--main"
              >
                <div
                  class="Layout--horizontal StyledProps--main"
                  style="width: 230px;"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
                    style="--text-line-clamp: 1;"
                  >
                    CUSTOM_VARIABLE
                  </p>
                  
                </div>
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--font-variation-small"
                  style="--text-line-clamp: 1; width: 230px;"
                >
                  common.ID: CUSTOM_VARIABLE
                </p>
              </div>
            </div>
          </div>
          <div
            class="TableV2--cell"
            role="cell"
            style="width: 20%;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-variation-body"
            >
              String
            </p>
          </div>
          <div
            class="TableV2--cell"
            role="cell"
            style="width: 20%;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-variation-body"
            >
              FIXED
            </p>
          </div>
          <div
            class="TableV2--cell"
            role="cell"
            style="width: 25%;"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--font-variation-form-input-text"
              style="--text-line-clamp: 1;"
            >
              CUSTOM
            </p>
          </div>
          <div
            class="TableV2--cell"
            role="cell"
            style="width: 5%;"
          >
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-end"
            >
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="Options"
                    >
                      <svg
                        fill="currentColor"
                        height="16"
                        viewBox="0 0 4 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <circle
                          cx="2"
                          cy="2"
                          r="1.5"
                        />
                        <circle
                          cx="2"
                          cy="8"
                          r="1.5"
                        />
                        <circle
                          cx="2"
                          cy="14"
                          r="1.5"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
